--- a/vignettes/example.Rmd
+++ b/vignettes/example.Rmd
@@ -68,6 +68,8 @@ draw.plotmath.cell(expression(inf(S)), i, nr); i <- i + 1
 draw.plotmath.cell(expression(sup(S)), i, nr); i <- i + 1
 ```
 
+Another example plot.
+
 ```{r}
 par(mar = c(5, 5, 5, 5), cex.lab = 1.3)
 plot(1:10, xlab = expression(hat(beta)), ylab = expression(hat(beta)))
