--- a/vignettes/example.Rmd
+++ b/vignettes/example.Rmd
@@ -10,7 +10,9 @@ vignette: >
 ```{r, include=FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
-  comment = "#>"
+  comment = "#>",
+  fig.height = 8,
+  fig.width = 8
 )
 ```
 
@@ -74,4 +76,3 @@ Another example plot.
 par(mar = c(5, 5, 5, 5), cex.lab = 1.3)
 plot(1:10, xlab = expression(hat(beta)), ylab = expression(hat(beta)))
 ```
-
