--- a/vignettes/example.Rmd
+++ b/vignettes/example.Rmd
@@ -10,9 +10,7 @@ vignette: >
 ```{r, include=FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
-  comment = "#>",
-  fig.height = 8,
-  fig.width = 8
+  comment = "#>"
 )
 ```
 
