--- a/vignettes/example.Rmd
+++ b/vignettes/example.Rmd
@@ -16,7 +16,7 @@ knitr::opts_chunk$set(
 
 The fifth demo from `demo(plotmath)`.
 
-```{r}
+```{r, fig.alt="Plot 1"}
 make.table <- function(nr, nc) {
   savepar <- par(mar=rep(0, 4), pty="s")
   plot(c(0, nc*2 + 1), c(0, -(nr + 1)),
@@ -70,7 +70,7 @@ draw.plotmath.cell(expression(sup(S)), i, nr); i <- i + 1
 
 Another example plot.
 
-```{r}
+```{r, fig.alt="Plot 2"}
 par(mar = c(5, 5, 5, 5), cex.lab = 1.3)
 plot(1:10, xlab = expression(hat(beta)), ylab = expression(hat(beta)))
 ```
